Fall2025: card fix 3 (#137)
* update 1 done

* fall 2025 fix projects

* updated team

* fix team images

* check team images

* fix file path

* new cropped team images, new projects formatting

* changed formatting

* fix 1 for images

* add new images

* fix card height

* images on home page

* card size fix 1

* card fix 2

* card fix 3

--- a/src/sass/pages/_team.scss
+++ b/src/sass/pages/_team.scss
@@ -1,7 +1,7 @@
 .member-gallery {
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
-	gap: 30px;
+	gap: 60px;
 	margin-top: 20px;
 	align-items: stretch;
 	justify-items: stretch;
